[Part 2] Built a network need to add a forward method

--- a/src/Introduction to PyTorch - Part 1 Tensors and operations.ipynb
+++ b/src/Introduction to PyTorch - Part 1 Tensors and operations.ipynb
@@ -436,6 +436,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([30., 40., 50.])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Matrix operations\n",
+    "in_features = torch.tensor([1,2,3,4], dtype=torch.float32)\n",
+    "\n",
+    "weight_matrix = torch.tensor([\n",
+    "    [1,2,3,4],\n",
+    "    [2,3,4,5],\n",
+    "    [3,4,5,6]\n",
+    "], dtype=torch.float32)\n",
+    "\n",
+    "weight_matrix.matmul(in_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
