[Part 3] Adding code for parts 2 & 3

--- a/src/Introduction to PyTorch - Part 1 Tensors and operations.ipynb
+++ b/src/Introduction to PyTorch - Part 1 Tensors and operations.ipynb
@@ -306,6 +306,8 @@
     "    [3,3,3,3],\n",
     "    [3,3,3,3]\n",
     "])\n",
+    "# Concatenating joins a sequence of tensors along an existing axis, \n",
+    "# and stacking joins a sequence of tensors along a new axis.\n",
     "t= torch.stack([t1,t2,t3])"
    ]
   },
